--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,7 @@ oauthlib==3.2.1
 Pillow==9.2.0
 pycparser==2.21
 PyJWT==2.5.0
+python-dotenv==0.21.0
 python3-openid==3.2.0
 pytz==2022.4
 reportlab==3.6.11
