--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ;
+    server_name 130.193.54.202;
     server_tokens off;
 
     location /media/ {
@@ -16,7 +16,7 @@ server {
     }
 
     location /admin/ {
-        proxy_pass http://backend:8000/admin/;
+        proxy_pass http://web:8000/admin/;
     }
 
     location /api/docs/ {
@@ -28,7 +28,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000;
+        proxy_pass http://web:8000;
     }
 
     location / {
