--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+autopep8==1.7.0
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -13,14 +14,19 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+flake8==5.0.4
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==1.7.0
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mccabe==0.7.0
 oauthlib==3.2.1
 Pillow==9.2.0
+pycodestyle==2.9.1
 pycparser==2.21
+pyflakes==2.5.0
 PyJWT==2.5.0
 python-dotenv==0.21.0
 python3-openid==3.2.0
@@ -32,6 +38,7 @@ six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.3
+toml==0.10.2
 typing_extensions==4.3.0
 uritemplate==4.1.1
 urllib3==1.26.12
