--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,3 +8,5 @@ RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt --no-cache-dir
 
 CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
+
+LABEL author='VictorUdalov'
