--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,4 @@
 asgiref==3.5.2
-autopep8==1.7.0
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -24,6 +23,7 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 oauthlib==3.2.1
 Pillow==9.2.0
+psycopg2-binary==2.9.4
 pycodestyle==2.9.1
 pycparser==2.21
 pyflakes==2.5.0
