--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ frontend/node_modules
 frontend/build
 media/
 static/admin
-atatic/rest_framework
+static/rest_framework
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
