--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,7 @@ MANIFEST
 frontend/node_modules
 frontend/build
 media/
-static/admin/
-static/rest_framework/
+static/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
