--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,12 @@ share/python-wheels/
 MANIFEST
 
 # Folders
-frontend/node_modules
-frontend/build
+frontend/node_modules/
+frontend/build/
 media/
 static/
+backend/static/
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
